2006-11-26  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-gst-0.10.c:
	(bacon_video_widget_new): Set the profile property on the audio sink
	so it respects the GNOME settings for audio output

2006-11-23  Bastien Nocera  <hadess@hadess.net>

	* data/properties.glade:
	* src/bacon-video-widget-properties.c:
	(bacon_video_widget_properties_new):
	* src/totem-properties-main.c: (totem_properties_get_pages): Patch
	from Eskil Bylund to fix spacing in the properties pages
	(Closes: #373171)

2006-11-23  Bastien Nocera  <hadess@hadess.net>

	* src/totem-session.c: (totem_session_restore): Patch from
	Marek Schmidt <xschmi01@stud.fit.vutbr.cz> to fix restoring the
	session. The playlist expects URI, we fed it a local filename
	(Closes: Debian #399983)

2006-11-22  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-gst-0.10.c:
	(bacon_video_widget_set_fullscreen): Fix compilation with NVTV support
	and the GStreamer backend (Closes: #378096)

2006-11-22  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totemStringGlue.h: patch from Christian Persch to
	fix the Mozilla string compat code

2006-11-20  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totemPlugin.cpp:
	* browser-plugin/totemPlugin.h:
	* browser-plugin/totemStringGlue.h:
	* configure.in: detect Mozilla 1.7 and use the proper string functions,
	most of the code from Christian Persch (Closes: #375624)

2006-11-20  Christian Persch  <chpe@cvs.gnome.org>

	* brower-plugin/totemPlugin.cpp:
	Really fix test for supported schemes. Bug #375677.

2006-11-20  Christian Persch  <chpe@cvs.gnome.org>

	* brower-plugin/totemPlugin.cpp:
	Fix test for supported schemes. Bug #375677.

2006-11-19  Christian Persch  <chpe@cvs.gnome.org>

	* brower-plugin/totemPlugin.cpp:
	If 'hidden' attribute is set without value, assume we're
	hidden. Bug #376757.

2006-11-19  Christian Persch  <chpe@cvs.gnome.org>

	* brower-plugin/totemPlugin.cpp:
	Use GetURLNotify, bug #376736.