@@ -1,3 +1,8 @@
+2006-11-20  Christian Persch  <chpe@cvs.gnome.org>
+
+	* src/plparser/test-parser.c:
+	Port to GOption. Bug #378577.
+
 2006-11-26  Bastien Nocera  <hadess@hadess.net>
 
 	* src/backend/bacon-video-widget-gst-0.10.c:
